--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "bootstrap": "^5.1.3",
     "jest": "^26.6.0",
     "node-sass": "^6.0.1",
-    "react": "^17.0.2",
+    "react": "^16.14.0",
     "react-bootstrap": "^2.0.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^16.14.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3"
   },
@@ -39,7 +39,8 @@
   },
   "devDependencies": {
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
-    "enzyme": "^3.11.0"
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6"
   },
   "jest": {
     "collectCoverageFrom": [
