--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "@types/styled-components": "5.9.1",
     "bootstrap": "^5.1.3",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
+    "jest": "^26.6.0",
     "node-sass": "^6.0.1",
-    "react": "^17.0.2",
+    "react": "^16.14.0",
     "react-bootstrap": "^2.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-dom": "^16.14.0",
+    "react-scripts": "4.0.3",
+    "react-test-renderer": "^17.0.2",
+    "styled-components": "^5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,6 +36,16 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/App.js"
     ]
   }
 }
