--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
-    "@types/styled-components": "5.9.1",
     "bootstrap": "^5.1.3",
     "jest": "^26.6.0",
     "node-sass": "^6.0.1",
@@ -14,10 +13,7 @@
     "react-bootstrap": "^2.0.2",
     "react-dom": "^16.14.0",
     "react-scripts": "4.0.3",
-<<<<<<< HEAD
-=======
     "react-test-renderer": "^17.0.2",
->>>>>>> master
     "styled-components": "^5.3.3"
   },
   "scripts": {
@@ -43,8 +39,7 @@
   },
   "devDependencies": {
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6"
+    "enzyme": "^3.11.0"
   },
   "jest": {
     "collectCoverageFrom": [
